data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2256.wast
;; 7. **Test Description**: Utilize a nested block which includes conditional branches (via `br_if`) within inner blocks, testing the stack unwinding and operand consumption requirements for each successful branch.    - **Constraint**: Check operand stack behavior for nested `br_if` branches within blocks.    - **Nesting Mismanagement Check**: Confirms that operand stack is correctly handled during conditional branching within nested blocks.

(assert_invalid
  (module (func $nested-block-with-br-if (result i32)
    (block (result i32)
      (i32.const 1)
      (block (result i32)
        (i32.const 2)
        (br_if 0 (i32.eqz (i32.const 0)))
        (i32.const 3)
      )
      (i32.const 4)
    )
  ))
  "type mismatch"
)